--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - static_volume:/usr/share/nginx/html/static
+      - media_volume:/usr/share/nginx/html/media
     ports:
       - '80:80'
     depends_on:
