--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,10 @@ http {
             alias /usr/share/nginx/html/static/;
         }
 
+        location /media/ {
+            alias /usr/share/nginx/html/media/;
+        }
+
         location / {
             proxy_pass http://web:8000;
             proxy_set_header Host $host;
