--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,8 @@ Django==4.2.5
 django-json-widget==1.1.1
 djangorestframework==3.14.0
 future==0.18.3
+gunicorn==21.2.0
+packaging==23.1
 Pillow==10.0.1
 pytz==2023.3.post1
 sqlparse==0.4.4
