--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,12 @@
+SSL=False
 DOMAIN=localhost
 
 SECRET_KEY=secret
 DEBUG=True
 ALLOWED_HOSTS=*
+
+STATIC_URL=/static/
+STATIC_ROOT=static
+
+MEDIA_URL=/media/
+MEDIA_ROOT=media
