--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3'
 
 services:
   web:
-    build: .
+    build: server
     ports:
       - '8000:8000'
+    env_file:
+      - ./.env
     volumes:
       - static_volume:/app/static
       - media_volume:/app/media
