--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,6 +9,8 @@ COPY ./requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /usr/src/app/
+RUN chmod +x ./entrypoint.sh
 
-CMD gunicorn hexocean.wsgi:application --bind 0.0.0.0:8000
+CMD ./entrypoint.sh
+
 
