--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-SSL=False
-DOMAIN=localhost
-
 SECRET_KEY=secret
 DEBUG=True
 ALLOWED_HOSTS=*
@@ -10,3 +7,9 @@ STATIC_ROOT=static
 
 MEDIA_URL=/media/
 MEDIA_ROOT=media
+
+POSTGRES_NAME=DB_NAME
+POSTGRES_USER=DB_USER
+POSTGRES_PASSWORD=DB_PASSWORD
+POSTGRES_HOST=DB_HOST
+POSTGRES_PORT=DB_PORT
