--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,11 @@ STATIC_ROOT=static
 MEDIA_URL=/media/
 MEDIA_ROOT=media
 
-POSTGRES_NAME=DB_NAME
-POSTGRES_USER=DB_USER
-POSTGRES_PASSWORD=DB_PASSWORD
-POSTGRES_HOST=DB_HOST
-POSTGRES_PORT=DB_PORT
+POSTGRES_NAME=root
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+ADMIN_USERNAME=admin1
+ADMIN_PASSWORD=admin1
