--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ POSTGRES_PASSWORD=root
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
-ADMIN_USERNAME=admin1
-ADMIN_PASSWORD=admin1
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
